--- a/.github/workflows/yes.yml
+++ b/.github/workflows/yes.yml
@@ -10,6 +10,6 @@ jobs:
       uses: shalzz/zola-deploy-action@master
       env:
         PAGES_BRANCH: gh-pages
-        BUILD_DIR: build
+        BUILD_DIR: .
         BUILD_FLAGS: --drafts
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
