--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,11 @@ base_url = "https://andypy.dev"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+taxonomies = [
+#   {name = "categories", rss = true},
+    {name = "tags", rss = true},
+]
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 theme = "serene"
